fixes project modal backdrop z-index (sets it to 2), reverts flex styling of header buttons/links so they remain on the left side of the screen

--- a/src/index.css
+++ b/src/index.css
@@ -417,8 +417,8 @@ html, body {
     overflow: hidden;
   }
 
-  .modal-backdrop.show {
-    display: none!important;
+  .modal-backdrop {
+    --bs-backdrop-zindex: 2;
   }
   
   .modal.fade .modal-dialog {
@@ -436,18 +436,6 @@ html, body {
     --bs-modal-bg: none;
     --bs-modal-footer-bg: none;
   }
-
-  /* #about-modal-header {
-    width: 100%;
-    height: 62.5px;
-    display: flex;
-    background-color: #000;
-    padding: 10px;
-    align-items: center;
-    box-shadow: 0px 5px 5px #00000044;
-    position: relative;
-    z-index: 3;
-  } */
 
   .offcanvas {
     background-color: #000;
@@ -942,8 +930,6 @@ html, body {
     padding: 0;
   }
   ul.navbar-nav {
-    align-items: flex-end;
-    justify-content: flex-end;
     padding: 10px 0 20px 0;
   }
   .navbar-text {
@@ -979,7 +965,7 @@ html, body {
     max-width: 360px;
   }
   .bio-img {
-    max-height: 320px;
+    /* max-height: 320px; */
   }
   #descript1-cont, #descript2-cont {
     max-width: 100%;
@@ -1049,10 +1035,6 @@ html, body {
     display: flex!important;
     justify-content: center;
     align-items: center;
-  }
-  div.fade.modal-backdrop.show {
-    display: block!important;
-    z-index: 2;
   }
   .software-video {
     max-width: unset;
